--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
 		}
 	},
 	"dependencies": {
+		"@types/svg2ttf": "^5.0.3",
 		"fs": "^0.0.1-security",
 		"jszip": "^3.10.1",
 		"path": "^0.12.7",
+		"svg2ttf": "^6.0.3",
 		"svgicons2svgfont": "^15.0.0"
 	}
 }
