--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@figma/eslint-plugin-figma-plugins": "*",
 		"@figma/plugin-typings": "*",
+		"@types/opentype.js": "^1.3.8",
 		"@types/svgicons2svgfont": "^10.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.12.0",
 		"@typescript-eslint/parser": "^6.12.0",
@@ -48,8 +49,10 @@
 	"dependencies": {
 		"@types/svg2ttf": "^5.0.3",
 		"@types/ttf2woff": "^2.0.4",
+		"fonteditor-core": "^2.4.1",
 		"fs": "^0.0.1-security",
 		"jszip": "^3.10.1",
+		"opentype.js": "^1.3.4",
 		"path": "^0.12.7",
 		"svg2ttf": "^6.0.3",
 		"svgicons2svgfont": "^15.0.0",
