--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
 		}
 	},
 	"dependencies": {
+		"@svgdotjs/svg.js": "^3.2.4",
+		"@types/paper": "^0.11.14",
 		"@types/svg2ttf": "^5.0.3",
 		"@types/ttf2woff": "^2.0.4",
 		"fonteditor-core": "^2.4.1",
 		"fs": "^0.0.1-security",
 		"jszip": "^3.10.1",
 		"opentype.js": "^1.3.4",
+		"paper": "^0.12.18",
 		"path": "^0.12.7",
 		"svg2ttf": "^6.0.3",
 		"svgicons2svgfont": "^15.0.0",
