--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@figma/eslint-plugin-figma-plugins": "*",
 		"@figma/plugin-typings": "*",
+		"@types/node": "^22.13.5",
 		"@types/opentype.js": "^1.3.8",
 		"@types/svgicons2svgfont": "^10.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.12.0",
@@ -51,6 +52,7 @@
 		"@types/paper": "^0.11.14",
 		"@types/svg2ttf": "^5.0.3",
 		"@types/ttf2woff": "^2.0.4",
+		"buffer": "^6.0.3",
 		"fonteditor-core": "^2.4.1",
 		"fs": "^0.0.1-security",
 		"jszip": "^3.10.1",
@@ -59,6 +61,7 @@
 		"path": "^0.12.7",
 		"svg2ttf": "^6.0.3",
 		"svgicons2svgfont": "^15.0.0",
+		"ttf2eot": "^3.1.0",
 		"ttf2woff": "^3.0.0",
 		"ttf2woff2": "^6.0.1"
 	}
